<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/flag_brazil"
        android:src="@drawable/flag_brazil"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/flag_usa"
        android:src="@drawable/flag_united_states"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/arrow"
        android:src="@drawable/arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/flag_brazil"
        app:layout_constraintEnd_toStartOf="@id/flag_usa"
        />

    <EditText
        android:id="@+id/text_input_number"
        android:textAlignment="center"
        android:hint="@string/information"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/view_brl"
        android:background="@drawable/view_style"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/text_input_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view_usa"
        android:background="@drawable/view_style"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/view_brl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_brazil_view"
        android:text="@string/brl_info"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/view_brl"
        app:layout_constraintStart_toStartOf="@+id/view_brl"
        app:layout_constraintBottom_toBottomOf="@+id/view_brl"
        />

    <TextView
        android:id="@+id/text_brazil_number"
        android:text="@string/brl_number"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/view_brl"
        app:layout_constraintEnd_toEndOf="@+id/view_brl"
        app:layout_constraintBottom_toBottomOf="@+id/view_brl"
        />

    <TextView
        android:id="@+id/text_usa_view"
        android:text="@string/usa_info"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/view_usa"
        app:layout_constraintStart_toStartOf="@+id/view_usa"
        app:layout_constraintBottom_toBottomOf="@+id/view_usa"
        />

    <TextView
        android:id="@+id/text_usa_number"
        android:text="@string/usa_number"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/view_usa"
        app:layout_constraintEnd_toEndOf="@+id/view_usa"
        app:layout_constraintBottom_toBottomOf="@+id/view_usa"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        android:text="@string/button_converter"
        android:background="@drawable/button_converter_style"
        android:textColor="@color/white"
        android:layout_width="150dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_usa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="50dp"/>

    <View
        android:id="@+id/view_converter_number"
        android:background="@drawable/view_style"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_conveter_number"
        android:text="@string/converter"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/view_converter_number"
        app:layout_constraintStart_toStartOf="@+id/view_converter_number"
        app:layout_constraintBottom_toBottomOf="@+id/view_converter_number"
        app:layout_constraintEnd_toEndOf="@+id/view_converter_number"
        />


</androidx.constraintlayout.widget.ConstraintLayout>